--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Conteúdo -->
     <main>
     <center>
-        <img src="/Kinooceany_plakat.jpg" alt="KINO"">
+        <img src="Kinooceany_plakat.jpg" alt="KINO"">
     </center>
     </main>
 
