--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Layout com 3 Linhas</title>
+    <title>Tydzień Filmu Portugalskiego | 2025</title>
     
 </head>
 <body>
